# aoc25

./: README.md  main.py  pyproject.toml
src/01/: main.py
src/02/: main.py
src/03/: in4.txt  main.py  out.txt
src/04/: main.py
src/05/: main.py
src/06/: in3.txt  in4.txt  main.py
src/07/: main.py
src/utils/: decs.py
